# archive-viewer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: application.h  archive_viewer.h  parser.h
include/gw2dattools/: BitArray.h  HuffmanTree.h  HuffmanTree.i
source/: archive-viewer.cpp  archive_viewer.cpp
source/application/: binary_preview.cpp  extension_checker.cpp  image_preview.cpp  left_panel.cpp  main_panel.cpp  middle_panel.cpp  model_preview.cpp  right_panel.cpp  video_preview.cpp
source/gw2dattools/: huffmanTreeUtils.cpp  inflateDatFileBuffer.cpp  inflateTextureFileBuffer.cpp
source/parser/: extract_data.cpp  parse_file.cpp  print_info.cpp  search_file.cpp
